--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
   "name": "Ink",
   "version": "1.0.5",
-  "description": "Ink is a responsive email framework for making emails that look great on any device.",
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.9"
-  },
-  "devDependencies": {
-    "assemble": "~0.4.33",
-    "grunt-shell": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/zurb/ink.git"
-  },
+  "description": "Responsive emails with personality, based on Ink.",
+  "homepage": "https://wink.kennethormandy.com",
+  "author": "Kenneth Ormandy <kenneth@chloi.io>",
+  "repository": "git@github.com:kennethormandy/wink.git",
+  "license": "MIT",
+  "private": true,
   "keywords": [
     "ink",
     "responsive",
     "email",
     "css",
-    "framework"
+    "framework",
+    "typography"
   ],
-  "author": "ZURB",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zurb/ink/issues"
+  "scripts": {
+    "test": "echo \"Error: no test specified…yet! Pull requests on kennethormandy/wink are greatly appriciated.\" && exit 1"
+  },
+  "devDependencies": {
+    "node-sass": "^0.9.3"
   }
 }
