--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ink",
-  "version": "1.0.5",
+  "name": "wink",
+  "version": "0.1.0",
   "description": "Responsive emails with personality, based on Ink.",
   "homepage": "https://wink.kennethormandy.com",
   "author": "Kenneth Ormandy <kenneth@chloi.io>",
