--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ink",
-  "version": "1.0.5",
-  "main": ["./css/ink.css"],
+  "name": "wink",
+  "version": "0.1.0",
+  "main": ["./dist/wink.css"],
   "ignore": [
     "**/.*",
     "docs",
